--- a/inst/NEWS
+++ b/inst/NEWS
@@ -36,4 +36,17 @@
       Added description of missing values to the vignette.
       Fixed handling of data with an Hmisc "labelled" class attached.
 	(Reported by Thomas MacFarland.)
+	
+0.7:
+      RowFactor now allows spacing=1.
+      Specifications for justification in table_options() are now 
+      recycled.
+      Missing values were not handled correctly when computing counts,
+      and when working with factors.  (Reported by Manuel Reif.)
+      Added Percent() pseudo-function. 
+      Cleaned up handling of row and column labels, especially in cases
+      where rows with different column headings are summed.
+      Added optional parameter to Heading() to use it only if another
+      hasn't already been set.
+      
       
