--- a/inst/doc/tables.Rnw
+++ b/inst/doc/tables.Rnw
@@ -56,7 +56,7 @@ latex(
 )
 @
 \end{center}
-
+	
 If you prefer the style of table that the \LaTeX\ \pkg{booktabs} package \citep{booktabs}
 produces, you can choose
 that style instead.  I mostly like it, so I have used
@@ -77,6 +77,7 @@ latex(
 
 
 \end{center}
+Details on \code{booktabs()} are given in section \ref{sec:booktabs} below.
 
 The idea of a table in the \pkg{tables} package is a rectangular array of values, with
 each row and column labelled, and possibly with groups of rows and groups of columns
@@ -203,7 +204,7 @@ The arguments are:
 \item[justification] The default text justification to use when printing.  For text display, the
 recognized values are \code{"n", "l", "c", "r"}, standing for none, left, center and right
 justification respectively.  For \LaTeX\ the justification is 
-specified via the \code{table_options()} function. 
+specified via the \code{table_options()} function (section \ref{sec:booktabs}).
 \item[file] The default method for the \code{Hmisc::latex()} generic writes the \LaTeX\ code
 to a file; \code{latex.tabular()} can optionally do the same, but it defaults to writing to screen,
 for use in Sweave documents like this one.
@@ -245,8 +246,10 @@ method:
 \begin{description}
 \item[justification] This is the default justification for data columns and their headers.
 Any justification string will be accepted; it should be
-one that the \LaTeX\ \verb+\tabular+ environment (or substitute) accepts.
-\item[rowlabeljustification] This is the default justification for row labels.
+one that the \LaTeX\ \verb+\tabular+ environment (or substitute) accepts.  If a vector
+of strings is specified they will be recycled across the columns of the table.
+\item[rowlabeljustification] This is the default justification for row labels.  A vector of
+strings will be recycled across the row label columns.
 \item[tabular] The environment to use in \LaTeX.  Alternatives to \code{"tabular"} such as
 \code{"longtable"} can be used here.  Those often also need 
 modifications within the table; the \code{Literal()} (section \ref{sec:Literal}) function may be
@@ -553,6 +556,13 @@ function or a string in quotes, which will be displayed as entered (so \LaTeX\ c
 
 If no argument is passed, the next label is suppressed.
 
+There's an optional third argument, which must be either \code{TRUE}
+or \code{FALSE} if present.  If it is \code{TRUE} (or not present),
+then the heading will override a previously specified heading.  If
+\code{FALSE}, it will not.  The latter seems likely only to be of use
+in automatically generated code, and is used in the automatically
+generated labels for factors.
+
 Example:  Replace \code{F} with a Greek $\Phi$, and suppress the label for \code{X}.
 \begin{center}
 <<results=tex>>=
@@ -566,13 +576,37 @@ latex( tabular( (Heading("$\\Phi$")*F+1) ~ (n=1)
 The \code{Justify()} pseudo-function is used to specify the text justification of the headers and data values in the table.
 If called with one argument, that value is used for both labels and data; if called with two arguments, the first is used for the 
 labels, the second for the data.  If no \code{Justify()} specification is given, the default passed to \code{format()}, \code{print()} or \code{latex()} will
-be used.
+be used.  Values may be specified without quotes if they are legal R names; quoted strings may also be used.  (The latter is useful
+for \LaTeX\ output, for example \verb!Justify("r@{}")!, to suppress column spacing on the right.)
 
 Example: 
 \begin{center}
 <<results=tex>>=
 latex( tabular( Justify(r)*(F+1) ~ Justify(c)*(n=1) 
    + Justify(c,r)*Format(digits=2)*X*(mean + sd) ) )
+@
+\end{center}
+
+\subsubsection{\code{Percent()}}
+
+The \code{Percent()} pseudo-function is used to specify a statistic that depends on other values in the table.  It has two optional arguments:
+\begin{description}
+\item[\code{denom="all"}]  This specifies how the denominator (argument \code{y} to \code{fn} below) is set.  Possible values are \code{"all"}, meaning all values
+are used, \code{"row"}, meaning only the values in the current row are used, \code{"col"}, meaning only the values in the current column
+are used.  If a logical vector is given, it is used to select which values form the denominator.  Anything else is just passed to \code{fn}
+as given.
+\item[\code{fn=percent}]  This is the function which actually does the computation.  The default definition is \code{function(x, y) 100*length(x)/length(y)},
+giving the percentage count, but any other two argument function could be used.
+\end{description}
+
+Example:
+\begin{center}
+<<results=tex>>=
+latex( tabular( (Factor(gear, "Gears") + 1)
+          *((n=1) + Percent() 
+            + (RowPct=Percent("row")) + (ColPct=Percent("col"))) 
+         ~ (Factor(carb, "Carburetors") + 1)
+          *Format(digits=1), data=mtcars ) )
 @
 \end{center}
 
@@ -583,7 +617,7 @@ Currently several examples of formula functions are provided.   Not all are
 particularly robust; e.g. \code{Hline()} only works for \LaTeX\ output and must be in a
 particular position in the formula.  Users can provide their own as well.  
 Such functions
-should return a language object, which will be substituted into the formula in place of the Formula
+should return a language object, which will be substituted into the formula in place of the formula
 function call.
 
 \subsubsection{\code{All()}}
@@ -727,12 +761,28 @@ The arguments are
 
 Example:  Show the first 15 lines of the iris dataset, in groups of 5 lines.
 
+\begin{center}
 <<results=tex>>=
 subset <- 1:15
 latex( tabular( RowFactor(subset, "$i$", spacing=5)  ~ 
        All(iris[subset,], factor=as.character)*Heading()*identity ) )
 @
-\\
+\end{center}
+ 
+To add extra space after each high level group in a multi-way
+classification, use \code{spacing = 1}.  For example:
+\begin{center}
+<<results=tex>>=
+dat <- expand.grid(Block=1:3, Treatment=LETTERS[1:2], 
+                                Subset=letters[1:2])
+dat$Response <- rnorm(12)
+latex( tabular( RowFactor(Block, spacing=1)
+                * RowFactor(Treatment, spacing=1, space=0.5)
+                * Factor(Subset)
+                ~ Response*Heading()*identity, data=dat),
+                options=list(rowlabeljustification="c"))
+@
+\end{center}
 
 For longer tables, 
 the \code{"longtable"} environment allows the table to cross page boundaries.  Using
@@ -776,6 +826,11 @@ latex( tabular( Factor(subset)  ~
        suppress=3 ) )
 @
 \end{center}
+(It is actually possible to get this to work with \code{RowFactor()}, but it
+is ugly: set the name and level names to \code{""}, and set the
+justification to \verb!"l@{}"! to suppress the intercolumn spacing.  Then
+the column of row labels will be there, but it will be zero width and
+invisible.)
 
 To get group labels to span multiple columns, the \code{levelnames} argument
 can be used with embedded \LaTeX\ code.  For example,
@@ -835,7 +890,7 @@ the code
 <<eval=FALSE>>=
 latex( tabular( mean ~ A*B_label, data=df ) ) 
 @
-wouild fail, as the labels would include the special characters.  But this will work:
+would fail, as the labels would include the special characters.  But this will work:
 \begin{center}
 <<results=tex>>=
 latex( tabular( mean ~ Factor(A)*All(df), data=df ) ) 
@@ -882,7 +937,8 @@ latex( tabular(
 
 \section*{Acknowledgments}
 
-I gratefully acknowledge helpful suggestions and hints from Rich Heiberger, Frank Harrell and Dieter Menne.
+I gratefully acknowledge helpful suggestions and hints from Rich
+Heiberger, Frank Harrell, Dieter Menne and Marius Hofert.
 
 \bibliography{tables}
 
